<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/image_1"
        android:id="@+id/image"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="150dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_to_bitcode"
        android:text="@string/welcome_to_bitcode"
        android:textSize="30sp"
        android:textColor="@color/dark_yellow"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Custom"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enquiry_form"
        android:id="@+id/Enquiry_form"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/welcome_to_bitcode"
        style="@style/custom_2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/name"
        style="@style/student_info"
        app:layout_constraintTop_toBottomOf="@id/Enquiry_form"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ename"
        android:hint="Enter Your Name"
        android:inputType="textPersonName"
        style="@style/edit_texts"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/Enquiry_form"
        android:layout_marginTop="75dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:text="@string/phone"
        style="@style/student_info"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ephone"
        style="@style/edit_texts"
        android:hint="Enter Contact"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/ename"
        app:layout_constraintStart_toEndOf="@id/phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/email"
        style="@style/student_info"
        app:layout_constraintTop_toBottomOf="@id/phone"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eemail"
        style="@style/edit_texts"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/ephone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/collage"
        style="@style/student_info"
        android:text="@string/collage"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ecollage"
        style="@style/edit_texts"
        android:hint="Enter Collage Name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/eemail"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/technology"
        style="@style/student_info"
        android:text="@string/technology"
        app:layout_constraintTop_toBottomOf="@id/collage"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etechnoloy"
        android:hint="Enter Technology"
        android:inputType="text"
        style="@style/edit_texts"
        app:layout_constraintTop_toBottomOf="@id/ecollage"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/year_passing"
        style="@style/student_info"
        android:text="@string/year_passing"
        app:layout_constraintTop_toBottomOf="@id/technology"
        android:layout_marginTop="35dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eyear_passing"
        android:hint="Enter Year of passing "
        android:inputType="date"
        style="@style/edit_texts"
        app:layout_constraintTop_toBottomOf="@id/etechnoloy"
        android:layout_marginTop="5dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Button"
        android:text="@string/submit"
        style="@style/student_info"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/eyear_passing"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="30dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>